--- a/kwikpost-vue/package.json
+++ b/kwikpost-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "show-watch-manager",
+  "name": "kwikpost-vue",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,12 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "node-fetch": "^2.7.0",
     "vue": "3.5.13",
-    "vue-router": "4.5.0"
+    "vue-router": "4.5.0",
+    "pinia": "^2.1.7",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "5.2.3",
-    "vite": "6.2.4"
+    "vite": "6.2.4",
+    "tailwindcss": "^3.3.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   }
 }
